# wowasticker

./: .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  CLAUDE.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  UNLICENSE  USER_STORY_ANALYSIS.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/cochranblock/wowasticker/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
docs/: UI_UX_ANALYSIS.md  compression_map.md
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md
pwa/: index.html  manifest.json  sw.js
scripts/: build-all-targets.sh  build-android.sh  build-pwa.sh  download-whisper.sh
src/: ai.rs  audio.rs  db.rs  jni.rs  lib.rs  main.rs  report.rs  ui.rs  wasm.rs
tests/: cli_integration.rs
