[package]
name = "wowasticker"
version = "0.1.0"
edition = "2021"

[lib]
name = "wowasticker"
path = "src/lib.rs"

[[bin]]
name = "wowasticker"
path = "src/main.rs"
required-features = ["dioxus"]

[[bin]]
name = "wowasticker-test"
path = "src/bin/wowasticker-test.rs"
required-features = ["tests"]

[dependencies]
# Dioxus for pure Rust mobile UI (optional: tests run without GTK)
dioxus = { version = "0.5", optional = true, features = ["mobile"] }

# Hugging Face Candle for local AI inference (Whisper GGUF) — optional for tests
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }

# Audio capture for dictation (optional: requires system libalsa on Linux)
cpal = { version = "0.15", optional = true }

# Local database (offline-first)
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exopack = { path = "../exopack", optional = true, features = ["triple_sims"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["dioxus", "candle", "audio"]
dioxus = ["dep:dioxus"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
audio = ["dep:cpal"]
tests = ["exopack"]