# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3
[package]
name = "wowasticker"
version = "0.2.0"
edition = "2024"
description = "Offline-first behavioral sticker chart for educators. Dioxus UI, Candle Whisper, SQLite."
license = "Unlicense"
repository = "https://github.com/cochranblock/wowasticker"
keywords = ["education", "behavioral", "sticker-chart", "offline-first", "whisper"]
categories = ["command-line-utilities", "database"]

[lib]
name = "wowasticker"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "wowasticker"
path = "src/main.rs"
required-features = ["dioxus"]

[[bin]]
name = "wowasticker-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "wowasticker-test"
path = "src/bin/wowasticker-test.rs"
required-features = ["tests"]

[dependencies]
# Dioxus for pure Rust mobile UI (optional: tests run without GTK)
dioxus = { version = "0.5", optional = true, features = ["desktop"] }

# Hugging Face Candle for local AI inference (Whisper GGUF) — optional for tests
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }

# Audio capture for dictation (optional: requires system libalsa on Linux)
cpal = { version = "0.15", optional = true }

# Local database (offline-first)
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime and utilities
tokio = { version = "1", features = ["rt", "macros", "time"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exopack = { git = "https://github.com/cochranblock/exopack", optional = true, features = ["triple_sims"] }
tokenizers = { version = "0.19", optional = true }
rand = { version = "0.8", optional = true }
jni = { version = "0.21", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["dioxus", "candle", "audio"]
dioxus = ["dep:dioxus"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:rand"]
audio = ["dep:cpal"]
jni = ["dep:jni"]
wasm = ["dep:wasm-bindgen"]
tests = ["exopack"]

[workspace]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true